# 8q-is

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  demo_battle.sh
docs/: Room-For-Improvements.md  src_overview.md
scripts/: manage.sh
src/: api.rs  auctioneer.rs  auctioneer_battles.rs  consent.rs  m8.rs  main.rs  markqant.rs
static/: auctioneer.html
