[package]
# Trish says: Numbers can't lead, but m8q can quantum-lead!
name = "m8q"
version = "0.1.0"
edition = "2021"
authors = ["Hue & Aye & Trish"]
description = "Quantum-compressed, MEM8-backed API for Markqant and Smart Tree data."

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
bytes = "1.5"
# For file handling, compression, and base64
flate2 = "1.0"
base64 = "0.21"
# For logging
tracing = "0.1"
tracing-subscriber = "0.3"
# For multipart uploads
actix-multipart = "0.6"
# For async streams
futures-util = "0.3"
async-stream = "0.3"
# For binary serialization
bincode = "1.3"
# For regex patterns
regex = "1.10"
# For hashing
sha2 = "0.10"
# For error handling
anyhow = "1.0"
# For global statics
lazy_static = "1.4"

# Local MEM8 container crate for quantum context storage
mem8 = { path = "../../MEM8/m8c" }

[dev-dependencies]
reqwest = "0.11"
